MODEXPW-487 - update readme